vue mixins for permissions

--- a/frontend/src/assets/css/lightseed.css
+++ b/frontend/src/assets/css/lightseed.css
@@ -34,7 +34,7 @@
     --seed-secondary-light: #A1ECDB;
 
     /* --seed-success: #1be098; */
-    --seed-success: #55efc4;
+    --seed-success: #1ec585;
     --seed-success-dark: #07b536;
     --seed-success-light: #E5FDF4;
 
